--- a/myFavoriteQuotes/app/styles/main.scss
+++ b/myFavoriteQuotes/app/styles/main.scss
@@ -1,6 +1,9 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
+@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+
+@import "_quotes.scss";
 
 .browsehappy {
   margin: 0.2em 0;
@@ -89,3 +92,5 @@ body {
     border-bottom: 0;
   }
 }
+
+
