--- a/myFavoriteQuotes/app/views/main.html
+++ b/myFavoriteQuotes/app/views/main.html
@@ -1,23 +1,32 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+    <h1>My Favorite Quotes With Yeoman</h1>
+    <p class="lead">
+        <img src="images/yeoman.png" alt="I'm Yeoman"><br>
+        Always a pleasure scaffolding your apps.
+    </p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div class="row">
+    <form class="quote">
+        <textarea class="form-control text" ng-model="newQuote.text" rows="3" placeholder="I like..."></textarea>
+        <span class="dash">-</span><input type="text" class="form-control author" ng-model="newQuote.author" placeholder="Mr. Smart Dude" />
+        <div>
+            <button type="submit" class="btn btn-primary pull-right" ng-click="addNewQuote()">Add</button>
+        </div>
+        <div class="tags">
+            <input class="form-control tag" type="text" ng-model="tags" placeholder="love, inspiration, life">
+        </div>
+    </form>
+</div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="row quotes">
+    <ul class="list-group">
+        <li ng-repeat="quote in quotes" class="quote list-group-item">
+            <p class="text">{{quote.text}}</p>
+            <p class="author">- {{quote.author}}</p>
+            <div class="tags">
+                <span ng-repeat="tag in quote.tags" class="label label-info tag">{{tag}}</span>
+            </div>
+        </li>
+    </ul>
 </div>
